Login and registering users

--- a/SamsAuctions/Views/Shared/_Layout.cshtml
+++ b/SamsAuctions/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
             </div>
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
+                <li><a href="javascript: deleteAllRegularUsers()">Delete regular users</a></li>
                 @*<li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
             <ul class="dropdown-menu">
@@ -123,7 +124,7 @@
     <script src="~/Lib/Bootstrap/js/bootstrap.js"></script>
     <script src="~/Lib/JqueryValidate/jquery.validate.js"></script>
     <script src="~/Lib/JqueryValidationUnobrusive/jquery.validate.unobtrusive.js"></script>
-
+    <script src="~/Scripts/Site.js"></script>
 
 
     @RenderSection("Scripts", false)
