--- a/SamsAuctions/Views/Account/Login.cshtml
+++ b/SamsAuctions/Views/Account/Login.cshtml
@@ -1,22 +1,49 @@
 ﻿@model LoginViewModel
 
-<div class="bg-primary m-1 p-1 text-white"><h4>Log In</h4></div>
-<div class="text-danger" asp-validation-summary="ModelOnly"></div>
+@{
+    ViewData["Title"] = "Logga in";
+}
+ 
+<!-- Modal -->
+<div id="loginModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
 
-<form asp-action="Login" method="post">
-    <input type="hidden" name="returnUrl" value="@ViewBag.returnUrl" />
-    <div class="form-group">
-        <label asp-for="Email"></label>
-        <input asp-for="Email" class="form-control" />
-        <span asp-validation-for="Email"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Password"></label>
-        <input asp-for="Password" class="form-control" />
-        <span asp-validation-for="Password"></span>
-    </div>
-    <button class="btn btn-primary btn-sm" type="submit">Logga in</button>
-    <a class="btn btn-primary btn-sm" asp-action="Register">Registrera nytt konto</a>
-</form>
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Logga in</h4>
+            </div>
+            <div class="modal-body">               
+                <div class="text-danger" asp-validation-summary="ModelOnly"></div>
+                <form asp-action="Login" method="post">
+                    <input type="hidden" name="returnUrl" value="@ViewBag.returnUrl" />
+                    <div class="form-group">
+                        <label asp-for="Email"></label>
+                        <input asp-for="Email" class="form-control" />
+                        <span asp-validation-for="Email"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Password"></label>
+                        <input asp-for="Password" class="form-control" />
+                        <span asp-validation-for="Password"></span>
+                    </div>
+                    <button class="btn btn-primary btn-sm" type="submit">Logga in</button>
+                    <a class="btn btn-primary btn-sm" asp-action="Register">Registrera nytt konto</a>
+                    <a class="btn btn-primary btn-sm" asp-action="LoginWithFaceBook">Logga in med facebook</a>
+                </form>
 
-<a asp-action="LoginWithFaceBook">Login with facebook</a>
+            </div>
+            <div class="modal-footer">
+            </div>
+        </div>
+
+    </div>
+</div>
+
+@section Scripts{
+    <script>
+        $(window).on('load', () => {
+            $('#loginModal').modal('show');
+        });
+    </script>
+}
