--- a/SamsAuctions/Views/Auction/EditAuction.cshtml
+++ b/SamsAuctions/Views/Auction/EditAuction.cshtml
@@ -1,10 +1,6 @@
 ﻿@model AuctionViewModel
 
 
-@{
-    ViewData["Title"] = "Editera auktion";
-}
-
 <!-- Modal -->
 <div id="editAuctionModal" class="modal fade" role="dialog">
     <div class="modal-dialog">
@@ -17,7 +13,7 @@
             </div>
             <div class="modal-body">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <form asp-action="EditAuction" method="post">
+                <form id="editAuctionForm" asp-action="EditAuction" method="post">
                     <div class="form-group">
                         <label asp-for="Title"></label>
                         <input asp-for="Title" class="form-control" />
@@ -65,11 +61,3 @@
 
     </div>
 </div>
-
-@section Scripts{
-    <script>
-        $(window).on('load', () => {
-            $('#editAuctionModal').modal('show');
-        });
-    </script>
-}
