--- a/SamsAuctions/Views/Shared/_Layout.cshtml
+++ b/SamsAuctions/Views/Shared/_Layout.cshtml
@@ -126,6 +126,7 @@
     <script src="~/Lib/Bootstrap/js/bootstrap.js"></script>
     <script src="~/Lib/JqueryValidate/jquery.validate.js"></script>
     <script src="~/Lib/JqueryValidationUnobrusive/jquery.validate.unobtrusive.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-ajax-unobtrusive@3.2.4/jquery.unobtrusive-ajax.min.js"></script>
     <script src="~/Scripts/Site.js"></script>
 
 
