--- a/SamsAuctions/Views/Shared/_Layout.cshtml
+++ b/SamsAuctions/Views/Shared/_Layout.cshtml
@@ -133,6 +133,7 @@
     <script src="~/Lib/JqueryValidationUnobrusive/jquery.validate.unobtrusive.js"></script>
     @*<script src="https://cdn.jsdelivr.net/npm/jquery-ajax-unobtrusive@3.2.4/jquery.unobtrusive-ajax.min.js"></script>*@
     <script src="~/Lib/jquery.unobtrusive-ajax/jquery.unobtrusive-ajax.min.js"></script>
+    <script src="~/Lib/Chartjs/Chart.min.js"></script>
     <script src="~/Scripts/Site.js"></script>
 
 
