--- a/SamsAuctions/Views/Shared/_Layout.cshtml
+++ b/SamsAuctions/Views/Shared/_Layout.cshtml
@@ -16,19 +16,22 @@
                 <a class="navbar-brand" href="#">WebSiteName</a>
             </div>
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="javascript: deleteAllRegularUsers()">Delete regular users</a></li>
+                <li class="active"><a asp-controller="Home" asp-action="Index">Home</a></li>
+
                 <li><a asp-controller="Auction" asp-action="Index">Auctions</a></li>
-                <li><a asp-controller="Admin" asp-action="Index">Hantera användare</a></li>
-                @*<li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-                <li><a href="#">Page 1-1</a></li>
-                <li><a href="#">Page 1-2</a></li>
-                <li><a href="#">Page 1-3</a></li>
-            </ul>
-        </li>
-        <li><a href="#">Page 2</a></li>*@
+                @if (User.IsInRole("Admin"))
+                {
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Admin<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a asp-controller="Admin" asp-action="Index">Hantera användare</a></li>
+                            <li><a asp-controller="Statistics" asp-action="Index">Statistik</a></li>
+                            <li><a href="javascript: deleteAllRegularUsers()">Delete regular users</a></li>
+                        </ul>
+                    </li>
+                }
+
+                @*<li><a href="#">Page 2</a></li>*@
 
                 @if (User?.Identity?.IsAuthenticated ?? false)
                 {
@@ -58,59 +61,59 @@
                 <li class="nav-item">
                     <a class="nav-link" asp-controller="Account" asp-action="Login">Login</a>
                 </li>*@
-                @*@if (User?.Identity?.IsAuthenticated ?? false)
-                    {
+    @*@if (User?.Identity?.IsAuthenticated ?? false)
+        {
 
-                        <li class="nav-item">
-                            <a class="nav-link" asp-controller="Product" asp-action="List">Meny</a>
-                        </li>
-                    }
+            <li class="nav-item">
+                <a class="nav-link" asp-controller="Product" asp-action="List">Meny</a>
+            </li>
+        }
 
-                    @if (User?.IsInRole("Admin") ?? false)
-                    {
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Admin
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" asp-controller="Admin" asp-action="Index">Användare</a>
-                                <a class="dropdown-item" asp-controller="AdminOrder" asp-action="OrderList">Beställningar</a>
-                                <a class="dropdown-item" asp-controller="AdminDish" asp-action="Index">Maträtter</a>
-                                <a class="dropdown-item" asp-controller="AdminDish" asp-action="ViewIngredients">Ingredienser</a>
-                            </div>
-                        </li>
-                    }
-
-
-                    @if (User?.Identity?.IsAuthenticated ?? false)
-                    {
-
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdownSettings" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="fa fa-cog" aria-hidden="true"></i>
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownSettings">
-                                <a class="dropdown-item" asp-controller="Account" asp-action="Edit">Konto (@User.Identity.Name)</a>
-                            </div>
-                        </li>
-                    }*@
-
-            @*</ul>*@
-
-            @*@if (User?.Identity?.IsAuthenticated ?? false)
-                {
-                    <text>
-                        @await Component.InvokeAsync("CartSummary")
-                    </text>
-
-                    <div class="logout-button">
-                        <a asp-controller="Account" asp-action="Logout"><i class="fa fa-sign-out" aria-hidden="true"></i></a>
-                    </div>
-                }*@
+        @if (User?.IsInRole("Admin") ?? false)
+        {
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Admin
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" asp-controller="Admin" asp-action="Index">Användare</a>
+                    <a class="dropdown-item" asp-controller="AdminOrder" asp-action="OrderList">Beställningar</a>
+                    <a class="dropdown-item" asp-controller="AdminDish" asp-action="Index">Maträtter</a>
+                    <a class="dropdown-item" asp-controller="AdminDish" asp-action="ViewIngredients">Ingredienser</a>
+                </div>
+            </li>
+        }
 
 
-        @*</div>
-    </nav>*@
+        @if (User?.Identity?.IsAuthenticated ?? false)
+        {
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" id="navbarDropdownSettings" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fa fa-cog" aria-hidden="true"></i>
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownSettings">
+                    <a class="dropdown-item" asp-controller="Account" asp-action="Edit">Konto (@User.Identity.Name)</a>
+                </div>
+            </li>
+        }*@
+
+    @*</ul>*@
+
+    @*@if (User?.Identity?.IsAuthenticated ?? false)
+        {
+            <text>
+                @await Component.InvokeAsync("CartSummary")
+            </text>
+
+            <div class="logout-button">
+                <a asp-controller="Account" asp-action="Logout"><i class="fa fa-sign-out" aria-hidden="true"></i></a>
+            </div>
+        }*@
+
+
+    @*</div>
+        </nav>*@
 
 
 
