started on fixing layout

--- a/SamsAuctions/Views/Admin/Index.cshtml
+++ b/SamsAuctions/Views/Admin/Index.cshtml
@@ -7,11 +7,11 @@
 
 
 
-<div class="bg-primary m-1 p-1 text-white">
+<div class="bg-info text-white">
     <h4>Användare</h4>
 </div>
 
-<table class="table table-sm table-bordered">
+<table class="table table-striped">
     <tr><th>Förnamn</th><th>Efternamn</th><th>Användarnamn</th><th>Roll</th></tr>
     @if (Model.Count() == 0)
     {
