--- a/SamsAuctions/Views/Shared/_Layout.cshtml
+++ b/SamsAuctions/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
                 <a class="navbar-brand" href="#">WebSiteName</a>
             </div>
             <ul class="nav navbar-nav">
-                <li class="active"><a asp-controller="Home" asp-action="Index">Home</a></li>
+                <li><a asp-controller="Home" asp-action="Index">Home</a></li>
 
                 <li><a asp-controller="Auction" asp-action="Index">Auctions</a></li>
                 @if (User.IsInRole("Admin"))
